--- a/http/.htaccess
+++ b/http/.htaccess
@@ -1,3 +1,31 @@
 RewriteEngine On
 
+
 # auto-generated from this point below
+RewriteRule 2017-01.json _data/2016-12-31.json [L]
+RewriteRule 2017-01.minimal.json _data/2016-12-31.minimal.json [L]
+RewriteRule 2017-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2016-12-31.csv [R,L]
+RewriteRule 2017-02.json _data/2017-03-31.json [L]
+RewriteRule 2017-02.minimal.json _data/2017-03-31.minimal.json [L]
+RewriteRule 2017-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2017-03-31.csv [R,L]
+RewriteRule 2017-03.json _data/2017-06-30.json [L]
+RewriteRule 2017-03.minimal.json _data/2017-06-30.minimal.json [L]
+RewriteRule 2017-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2017-06-30.csv [R,L]
+RewriteRule 2017-04.json _data/2017-09-30.json [L]
+RewriteRule 2017-04.minimal.json _data/2017-09-30.minimal.json [L]
+RewriteRule 2017-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2017-09-30.csv [R,L]
+RewriteRule 2018-01.json _data/2017-12-31.json [L]
+RewriteRule 2018-01.minimal.json _data/2017-12-31.minimal.json [L]
+RewriteRule 2018-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2017-12-31.csv [R,L]
+RewriteRule 2018-02.json _data/2018-03-31.json [L]
+RewriteRule 2018-02.minimal.json _data/2018-03-31.minimal.json [L]
+RewriteRule 2018-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2018-03-31.csv [R,L]
+RewriteRule 2018-03.json _data/2018-06-30.json [L]
+RewriteRule 2018-03.minimal.json _data/2018-06-30.minimal.json [L]
+RewriteRule 2018-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2018-06-30.csv [R,L]
+RewriteRule 2018-04.json _data/2018-09-30.json [L]
+RewriteRule 2018-04.minimal.json _data/2018-09-30.minimal.json [L]
+RewriteRule 2018-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2018-09-30.csv [R,L]
+RewriteRule index.json _data/2018-12-31.json [L]
+RewriteRule index.minimal.json _data/2018-12-31.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2018-12-31.csv [R,L]
