--- a/http/.htaccess
+++ b/http/.htaccess
@@ -26,6 +26,9 @@ RewriteRule 2018-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2018-04.json _data/2018-09-30.json [L]
 RewriteRule 2018-04.minimal.json _data/2018-09-30.minimal.json [L]
 RewriteRule 2018-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2018-09-30.csv [R,L]
-RewriteRule index.json _data/2018-12-31.json [L]
-RewriteRule index.minimal.json _data/2018-12-31.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2018-12-31.csv [R,L]
+RewriteRule 2019-01.json _data/2018-12-31.json [L]
+RewriteRule 2019-01.minimal.json _data/2018-12-31.minimal.json [L]
+RewriteRule 2019-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2018-12-31.csv [R,L]
+RewriteRule index.json _data/2019-03-31.json [L]
+RewriteRule index.minimal.json _data/2019-03-31.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2019-03-31.csv [R,L]
