--- a/http/.htaccess
+++ b/http/.htaccess
@@ -45,6 +45,9 @@ RewriteRule 2020-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2020-02.json _data/2020-03-31.json [L]
 RewriteRule 2020-02.minimal.json _data/2020-03-31.minimal.json [L]
 RewriteRule 2020-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2020-03-31.csv [R,L]
-RewriteRule index.json _data/2020-03-31.json [L]
-RewriteRule index.minimal.json _data/2020-03-31.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2020-03-31.csv [R,L]
+RewriteRule 2021-01.json _data/2021-03-31.json [L]
+RewriteRule 2021-01.minimal.json _data/2021-03-31.minimal.json [L]
+RewriteRule 2021-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-03-31.csv [R,L]
+RewriteRule index.json _data/2021-03-31.json [L]
+RewriteRule index.minimal.json _data/2021-03-31.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-03-31.csv [R,L]
