--- a/http/.htaccess
+++ b/http/.htaccess
@@ -54,9 +54,9 @@ RewriteRule 2021-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2021-03.json _data/2021-09-30.json [L]
 RewriteRule 2021-03.minimal.json _data/2021-09-30.minimal.json [L]
 RewriteRule 2021-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-09-30.csv [R,L]
-RewriteRule 2021-04-provisional.json _data/2021-12-31.json [L]
-RewriteRule 2021-04-provisional.minimal.json _data/2021-12-31.minimal.json [L]
-RewriteRule 2021-04-provisional.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-12-31.csv [R,L]
-RewriteRule index.json _data/2021-09-30.json [L]
-RewriteRule index.minimal.json _data/2021-09-30.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-09-30.csv [R,L]
+RewriteRule 2021-04.json _data/2021-12-31.json [L]
+RewriteRule 2021-04.minimal.json _data/2021-12-31.minimal.json [L]
+RewriteRule 2021-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-12-31.csv [R,L]
+RewriteRule index.json _data/2021-12-31.json [L]
+RewriteRule index.minimal.json _data/2021-12-31.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-12-31.csv [R,L]
