--- a/http/.htaccess
+++ b/http/.htaccess
@@ -57,6 +57,9 @@ RewriteRule 2021-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2021-04.json _data/2021-12-31.json [L]
 RewriteRule 2021-04.minimal.json _data/2021-12-31.minimal.json [L]
 RewriteRule 2021-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-12-31.csv [R,L]
-RewriteRule index.json _data/2021-12-31.json [L]
-RewriteRule index.minimal.json _data/2021-12-31.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2021-12-31.csv [R,L]
+RewriteRule 2022-01.json _data/2022-03-31.json [L]
+RewriteRule 2022-01.minimal.json _data/2022-03-31.minimal.json [L]
+RewriteRule 2022-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-03-31.csv [R,L]
+RewriteRule index.json _data/2022-03-31.json [L]
+RewriteRule index.minimal.json _data/2022-03-31.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-03-31.csv [R,L]
