--- a/http/.htaccess
+++ b/http/.htaccess
@@ -60,6 +60,9 @@ RewriteRule 2021-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2022-01.json _data/2022-03-31.json [L]
 RewriteRule 2022-01.minimal.json _data/2022-03-31.minimal.json [L]
 RewriteRule 2022-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-03-31.csv [R,L]
-RewriteRule index.json _data/2022-03-31.json [L]
-RewriteRule index.minimal.json _data/2022-03-31.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-03-31.csv [R,L]
+RewriteRule 2022-02.json _data/2022-06-30.json [L]
+RewriteRule 2022-02.minimal.json _data/2022-06-30.minimal.json [L]
+RewriteRule 2022-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-06-30.csv [R,L]
+RewriteRule index.json _data/2022-06-30.json [L]
+RewriteRule index.minimal.json _data/2022-06-30.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-06-30.csv [R,L]
