--- a/http/.htaccess
+++ b/http/.htaccess
@@ -66,6 +66,9 @@ RewriteRule 2022-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2022-03.json _data/2022-09-30.json [L]
 RewriteRule 2022-03.minimal.json _data/2022-09-30.minimal.json [L]
 RewriteRule 2022-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-09-30.csv [R,L]
-RewriteRule index.json _data/2022-09-30.json [L]
-RewriteRule index.minimal.json _data/2022-09-30.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-09-30.csv [R,L]
+RewriteRule 2022-04.json _data/2022-12-31.json [L]
+RewriteRule 2022-04.minimal.json _data/2022-12-31.minimal.json [L]
+RewriteRule 2022-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-12-31.csv [R,L]
+RewriteRule index.json _data/2022-12-31.json [L]
+RewriteRule index.minimal.json _data/2022-12-31.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2022-12-31.csv [R,L]
