--- a/http/.htaccess
+++ b/http/.htaccess
@@ -75,6 +75,9 @@ RewriteRule 2023-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2023-02.json _data/2023-06-30.json [L]
 RewriteRule 2023-02.minimal.json _data/2023-06-30.minimal.json [L]
 RewriteRule 2023-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2023-06-30.csv [R,L]
-RewriteRule index.json _data/2023-06-30.json [L]
-RewriteRule index.minimal.json _data/2023-06-30.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2023-06-30.csv [R,L]
+RewriteRule 2023-03.json _data/2023-09-30.json [L]
+RewriteRule 2023-03.minimal.json _data/2023-09-30.minimal.json [L]
+RewriteRule 2023-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2023-09-30.csv [R,L]
+RewriteRule index.json _data/2023-09-30.json [L]
+RewriteRule index.minimal.json _data/2023-09-30.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2023-09-30.csv [R,L]
