--- a/http/.htaccess
+++ b/http/.htaccess
@@ -84,6 +84,9 @@ RewriteRule 2023-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2024-01.json _data/2024-03-31.json [L]
 RewriteRule 2024-01.minimal.json _data/2024-03-31.minimal.json [L]
 RewriteRule 2024-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2024-03-31.csv [R,L]
-RewriteRule index.json _data/2024-03-31.json [L]
-RewriteRule index.minimal.json _data/2024-03-31.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2024-03-31.csv [R,L]
+RewriteRule 2024-02.json _data/2024-06-30.json [L]
+RewriteRule 2024-02.minimal.json _data/2024-06-30.minimal.json [L]
+RewriteRule 2024-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2024-06-30.csv [R,L]
+RewriteRule index.json _data/2024-06-30.json [L]
+RewriteRule index.minimal.json _data/2024-06-30.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2024-06-30.csv [R,L]
