--- a/http/.htaccess
+++ b/http/.htaccess
@@ -90,6 +90,9 @@ RewriteRule 2024-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2024-03.json _data/2024-09-30.json [L]
 RewriteRule 2024-03.minimal.json _data/2024-09-30.minimal.json [L]
 RewriteRule 2024-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2024-09-30.csv [R,L]
-RewriteRule index.json _data/2024-09-30.json [L]
-RewriteRule index.minimal.json _data/2024-09-30.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2024-09-30.csv [R,L]
+RewriteRule 2024-04.json _data/2024-12-31.json [L]
+RewriteRule 2024-04.minimal.json _data/2024-12-31.minimal.json [L]
+RewriteRule 2024-04.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2024-12-31.csv [R,L]
+RewriteRule index.json _data/2024-12-31.json [L]
+RewriteRule index.minimal.json _data/2024-12-31.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2024-12-31.csv [R,L]
