--- a/http/.htaccess
+++ b/http/.htaccess
@@ -99,6 +99,9 @@ RewriteRule 2025-01.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/ma
 RewriteRule 2025-02.json _data/2025-06-30.json [L]
 RewriteRule 2025-02.minimal.json _data/2025-06-30.minimal.json [L]
 RewriteRule 2025-02.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2025-06-30.csv [R,L]
-RewriteRule index.json _data/2025-06-30.json [L]
-RewriteRule index.minimal.json _data/2025-06-30.minimal.json [L]
-RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2025-06-30.csv [R,L]
+RewriteRule 2025-03.json _data/2025-09-30.json [L]
+RewriteRule 2025-03.minimal.json _data/2025-09-30.minimal.json [L]
+RewriteRule 2025-03.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2025-09-30.csv [R,L]
+RewriteRule index.json _data/2025-09-30.json [L]
+RewriteRule index.minimal.json _data/2025-09-30.minimal.json [L]
+RewriteRule index.csv https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings/2025-09-30.csv [R,L]
